-- ============================================================================
-- 이걸주네? 초기 스키마
-- 기준 문서: DB.dbml (PostgreSQL / MVP 8-table schema)
--
-- 스키마는 Flyway 가 소유한다. Hibernate 는 ddl-auto: validate 로 검증만 한다.
-- 이후 변경은 반드시 새 마이그레이션(V2__, V3__ ...)으로 추가한다.
--
-- 주의: 이 마이그레이션은 "빈 스키마"를 전제로 한다.
-- 이전 스키마가 남아 있는 DB 에서는 Flyway 가 실행을 거부한다.
-- 절차는 README "기존 DB 에서 업그레이드" 참고.
-- ============================================================================

-- UC1 / REQ-F-001. 일반 이메일 회원가입·로그인 사용자
CREATE TABLE users (
    user_id       BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    email         VARCHAR(255) NOT NULL,
    password_hash VARCHAR(255) NOT NULL,
    name          VARCHAR(100) NOT NULL,
    created_at    TIMESTAMPTZ  NOT NULL DEFAULT now(),
    updated_at    TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT uq_users_email UNIQUE (email),
    CONSTRAINT chk_users_email_not_blank CHECK (char_length(btrim(email)) > 3),
    CONSTRAINT chk_users_name_not_blank CHECK (char_length(btrim(name)) > 0)
);

-- UC2 / REQ-F-002. 사용자가 직접 관리하는 비공개 선물 대상
CREATE TABLE recipient (
    recipient_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id      BIGINT       NOT NULL,
    name         VARCHAR(100) NOT NULL,
    relationship VARCHAR(50)  NOT NULL,
    age_group    VARCHAR(30)  NOT NULL,
    gender       VARCHAR(20)  NOT NULL,
    job          VARCHAR(100),
    created_at   TIMESTAMPTZ  NOT NULL DEFAULT now(),
    updated_at   TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT fk_recipient_user FOREIGN KEY (user_id) REFERENCES users (user_id) ON DELETE CASCADE,
    CONSTRAINT chk_recipient_name_not_blank CHECK (char_length(btrim(name)) > 0)
);
CREATE INDEX idx_recipient_user_id ON recipient (user_id);

-- UC3·UC5·UC6·UC7. 직접 입력 또는 카카오 분석 후 사용자가 승인한 취향만 저장
CREATE TABLE structured_preference (
    preference_id    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    recipient_id     BIGINT       NOT NULL,
    preference_type  VARCHAR(50)  NOT NULL,
    preference_value VARCHAR(255) NOT NULL,
    source_type      VARCHAR(20)  NOT NULL,
    created_at       TIMESTAMPTZ  NOT NULL DEFAULT now(),
    updated_at       TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT fk_structured_preference_recipient FOREIGN KEY (recipient_id)
        REFERENCES recipient (recipient_id) ON DELETE CASCADE,
    CONSTRAINT chk_preference_type CHECK (preference_type IN
        ('INTEREST', 'PREFERRED_CATEGORY', 'PREFERRED_ATTRIBUTE', 'DISLIKED_CATEGORY', 'WISH_ITEM')),
    CONSTRAINT chk_preference_source CHECK (source_type IN ('DIRECT', 'KAKAO')),
    CONSTRAINT chk_preference_value_not_blank CHECK (char_length(btrim(preference_value)) > 0)
);
CREATE INDEX idx_structured_preference_recipient_id ON structured_preference (recipient_id);
CREATE UNIQUE INDEX uq_recipient_preference
    ON structured_preference (recipient_id, preference_type, preference_value);

-- UC11 / REQ-F-011. 대상에게 과거에 준 선물
CREATE TABLE previous_gifts (
    previous_gift_id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    recipient_id     BIGINT       NOT NULL,
    gift_name        VARCHAR(255) NOT NULL,
    gift_category    VARCHAR(100),
    gifted_at        DATE,
    note             TEXT,
    created_at       TIMESTAMPTZ  NOT NULL DEFAULT now(),
    updated_at       TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT fk_previous_gifts_recipient FOREIGN KEY (recipient_id)
        REFERENCES recipient (recipient_id) ON DELETE CASCADE,
    CONSTRAINT chk_previous_gift_name_not_blank CHECK (char_length(btrim(gift_name)) > 0)
);
CREATE INDEX idx_previous_gifts_recipient_id ON previous_gifts (recipient_id);

-- UC3·UC7. 추천 당시 사용자가 입력한 상황별 조건
CREATE TABLE gift_conditions (
    condition_id    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    recipient_id    BIGINT       NOT NULL,
    budget_min      INTEGER      NOT NULL,
    budget_max      INTEGER      NOT NULL,
    occasion_type   VARCHAR(100) NOT NULL,
    occasion_date   DATE,
    preference_note TEXT,
    avoid_gift_note TEXT,
    created_at      TIMESTAMPTZ  NOT NULL DEFAULT now(),
    updated_at      TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT fk_gift_conditions_recipient FOREIGN KEY (recipient_id)
        REFERENCES recipient (recipient_id) ON DELETE CASCADE,
    CONSTRAINT chk_gift_conditions_budget_min CHECK (budget_min >= 0),
    CONSTRAINT chk_gift_conditions_budget_range CHECK (budget_max >= budget_min),
    CONSTRAINT chk_gift_conditions_occasion_not_blank CHECK (char_length(btrim(occasion_type)) > 0)
);
CREATE INDEX idx_gift_conditions_recipient_id ON gift_conditions (recipient_id);

-- UC7·UC8·UC10. 조건과 분리된 AI 실행 기록
CREATE TABLE recommendations (
    recommendation_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    condition_id               BIGINT      NOT NULL,
    previous_recommendation_id BIGINT,
    status                     VARCHAR(20) NOT NULL,
    failure_code               VARCHAR(50),
    failure_message            TEXT,
    created_at                 TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at                 TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT fk_recommendations_condition FOREIGN KEY (condition_id)
        REFERENCES gift_conditions (condition_id) ON DELETE CASCADE,
    CONSTRAINT fk_recommendations_previous FOREIGN KEY (previous_recommendation_id)
        REFERENCES recommendations (recommendation_id) ON DELETE SET NULL,
    CONSTRAINT chk_recommendation_status CHECK (status IN ('PROCESSING', 'SUCCESS', 'FAILED')),
    CONSTRAINT chk_recommendation_not_self
        CHECK (previous_recommendation_id IS NULL OR previous_recommendation_id <> recommendation_id),
    CONSTRAINT chk_recommendation_failure_state
        CHECK (status = 'FAILED' OR (failure_code IS NULL AND failure_message IS NULL)),
    CONSTRAINT chk_recommendation_failure_message
        CHECK (status <> 'FAILED' OR failure_message IS NOT NULL)
);
CREATE INDEX idx_recommendations_condition_id ON recommendations (condition_id);
CREATE INDEX idx_recommendations_previous_id ON recommendations (previous_recommendation_id);

-- UC8·UC9·UC10. 한 번의 추천 실행에서 생성된 여러 선물 후보
CREATE TABLE recommendation_candidates (
    candidate_id          BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    recommendation_id     BIGINT       NOT NULL,
    gift_name             VARCHAR(255) NOT NULL,
    gift_category         VARCHAR(100),
    estimated_price_min   INTEGER,
    estimated_price_max   INTEGER,
    recommendation_reason TEXT         NOT NULL,
    considered_info       TEXT,
    caution_note          TEXT,
    recommend_rank        INTEGER      NOT NULL,
    created_at            TIMESTAMPTZ  NOT NULL DEFAULT now(),
    CONSTRAINT fk_candidates_recommendation FOREIGN KEY (recommendation_id)
        REFERENCES recommendations (recommendation_id) ON DELETE CASCADE,
    CONSTRAINT chk_candidate_price_min CHECK (estimated_price_min IS NULL OR estimated_price_min >= 0),
    CONSTRAINT chk_candidate_price_range CHECK (
        estimated_price_max IS NULL OR estimated_price_min IS NULL OR estimated_price_max >= estimated_price_min),
    CONSTRAINT chk_candidate_recommend_rank CHECK (recommend_rank > 0),
    CONSTRAINT chk_candidate_name_not_blank CHECK (char_length(btrim(gift_name)) > 0)
);
CREATE INDEX idx_candidates_recommendation_id ON recommendation_candidates (recommendation_id);
CREATE UNIQUE INDEX uq_candidate_recommend_rank
    ON recommendation_candidates (recommendation_id, recommend_rank);

-- UC9·UC10. 후보별 현재 피드백 0..1건. 변경 시 upsert
CREATE TABLE feedback (
    feedback_id    BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    candidate_id   BIGINT      NOT NULL,
    feedback_type  VARCHAR(20) NOT NULL,
    dislike_reason VARCHAR(255),
    created_at     TIMESTAMPTZ NOT NULL DEFAULT now(),
    updated_at     TIMESTAMPTZ NOT NULL DEFAULT now(),
    CONSTRAINT fk_feedback_candidate FOREIGN KEY (candidate_id)
        REFERENCES recommendation_candidates (candidate_id) ON DELETE CASCADE,
    CONSTRAINT uq_feedback_candidate UNIQUE (candidate_id),
    CONSTRAINT chk_feedback_type CHECK (feedback_type IN ('LIKE', 'DISLIKE')),
    CONSTRAINT chk_feedback_dislike_reason CHECK (dislike_reason IS NULL OR dislike_reason IN
        ('TASTE_MISMATCH', 'ALREADY_OWNED', 'SIMILAR_TO_PREVIOUS', 'TOO_BURDENSOME',
         'NOT_PRACTICAL', 'PRICE_INAPPROPRIATE', 'WANT_DIFFERENT_STYLE', 'OTHER')),
    CONSTRAINT chk_feedback_reason CHECK (
        (feedback_type = 'LIKE' AND dislike_reason IS NULL) OR feedback_type = 'DISLIKE')
);
